Move clustering service and corresponding cache implementations to EE Move license manager to EE and remove all license checks in CE
git-svn-id: svn://localhost/jahia/trunk@9295 69c369ed-ed09-0410-a4a1-e19a46c23626